# attestack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: attestack-evidence.yml  ci.yml  docs.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  agent-guide.md  agent-setup.md  architecture.md  ci-integration.md  cli-spec.md  contributing.md  data-model.md  distribution.md  harness-integrations.md  installation.md  introduction.md  product-brief.md  quickstart.md  releasing.md  scenarios.md  security-model.md  testing-strategy.md  use-cases.md
book/theme/: custom.css
crates/attestack-cli/: Cargo.toml  README.md
crates/attestack-cli/src/: agent.rs  ci.rs  commands.rs  main.rs  run.rs
crates/attestack-cli/tests/: cli_help.rs  e2e_full_demo.rs  e2e_portable_verify.rs  golden_fixtures.rs  integration.rs
crates/attestack-cli/tests/common/: mod.rs
crates/attestack-core/: Cargo.toml  README.md
crates/attestack-core/src/: error.rs  hash.rs  ids.rs  lib.rs  sign.rs  verify.rs  verify_report.rs
crates/attestack-core/src/types/: artifact.rs  bundle.rs  event.rs  identity.rs  mod.rs  session.rs  signature.rs
crates/attestack-mcp/: Cargo.toml  README.md
crates/attestack-mcp/src/: main.rs  server.rs
crates/attestack-store/: Cargo.toml  README.md
crates/attestack-store/src/: artifacts.rs  bundle.rs  doctor.rs  git.rs  identity.rs  io.rs  lib.rs  report.rs  session_ops.rs
docs/: README.md  agent-guide.md  agent-setup.md  architecture.md  ci-integration.md  cli-spec.md  contributing.md  data-model.md  distribution.md  harness-integrations.md  installation.md  product-brief.md  releasing.md  scenarios.md  security-model.md  testing-strategy.md  use-cases.md
examples/agents/: README.md
examples/agents/claude-code/: CLAUDE.md.snippet
examples/agents/cline/: mcp.json
examples/agents/copilot/: copilot-instructions.md
examples/agents/cursor/: mcp.json  rules.mdc
examples/basic-session/: README.md
examples/github-actions/: attestack-evidence.yml
examples/harnesses/: README.md
examples/harnesses/_shared/: attestack_cli.py
examples/harnesses/aider/: README.md  run-with-evidence.sh
examples/harnesses/inspect-ai/: README.md  attestack_hooks.py  demo_eval.py  requirements.txt  run_demo.sh
examples/harnesses/langgraph/: README.md  attestack_callback.py  demo_graph.py  run_demo.sh
examples/harnesses/openhands/: README.md  run-with-evidence.sh
examples/mcp/: cursor-mcp.json
scripts/: agent-session.sh  build-docs.sh  check.sh  dogfood-agent.sh  generate-fixtures.sh  harness-inspect-ai-smoke.sh  harness-langgraph-smoke.sh  install.sh  release-check.sh  render-demos.sh  setup-agent.sh  smoke-with-bin.sh  smoke.sh
scripts/demos/: README.md  quickstart.tape
site/: astro.config.mjs  package.json
site/scripts/: sync-content.mjs
site/src/components/: ChainDemo.astro  CompareGrid.astro  DemoGif.astro  Diagram.astro  FeatureGrid.astro  PersonaGrid.astro
site/src/content/docs/: index.mdx
site/src/content/docs/concepts/: architecture.md  data-model.md  security-model.md
site/src/content/docs/getting-started/: installation.md  quickstart.mdx  scenarios.md  use-cases.md
site/src/content/docs/integrations/: agent-guide.md  agent-setup.md  ci.md  distribution.md  harnesses.md
site/src/content/docs/project/: contributing.md  (+3 more)
site/src/styles/: custom.css
testdata/: README.md
testdata/command-session/: events.jsonl  session.json
testdata/minimal-session/: events.jsonl  session.json
testdata/valid-bundle/: default.public.json
(+1 files in other folders)
