[package]
name = "attestack-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core Attestack types, hashing, and verification primitives"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
time.workspace = true
serde_jcs.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
